--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,11 @@
     "vendor/bower",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "app-layout": "PolymerElements/app-layout#^2.0.4",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
+    "paper-fab": "PolymerElements/paper-fab#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1"
+  }
 }
