--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,22 @@
     "tests"
   ],
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#^2.0.4",
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
     "paper-fab": "PolymerElements/paper-fab#^2.0.0",
-    "iron-icons": "PolymerElements/iron-icons#^2.0.1"
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "app-layout": "PolymerElements/app-layout#^2.0.4",
+    "paper-menu": "PolymerElements/paper-menu#^1.3.0",
+    "paper-styles": "PolymerElements/paper-styles#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+    "font-roboto": "PolymerElements/font-roboto#^1.0.3",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^2.0.0",
+    "paper-badge": "PolymerElements/paper-badge#^2.0.0",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.5",
+    "iron-list": "PolymerElements/iron-list#^2.0.10",
+    "paper-input": "PolymerElements/paper-input#^2.0.2",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.1",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   }
 }
