--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "iron-list": "PolymerElements/iron-list#^2.0.10",
     "paper-input": "PolymerElements/paper-input#^2.0.2",
     "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.1",
-    "paper-button": "PolymerElements/paper-button#^2.0.0"
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0"
   }
 }
