--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,14 @@
     "paper-input": "PolymerElements/paper-input#^2.0.2",
     "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.1",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0"
+    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
+    "paper-card": "PolymerElements/paper-card#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.1",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.0.0"
+  },
+  "resolutions": {
+    "iron-flex-layout": "1 - 2",
+    "paper-styles": "^2.0.0"
   }
 }
